fix footer ul spacing, add styling on table and add href on anchor

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: .5rem;
+  margin-top: 1.5rem;
 
   & li {
     color: var(--yellow-700);
@@ -43,6 +44,7 @@
 .socialIcons {
   display: flex;
   gap: .5rem;
+  line-height: 0;
 }
 
 @media (width >= 80em) {
