--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -33,6 +33,7 @@
 
 .anchor{
   color: var(--gray-900);
+  border-bottom: 1px solid transparent;
   transition: color .1s, border-bottom .1s ease;
   &:hover {
     border-bottom: 1px solid var(--yellow-700);
