--- a/src/components/Pricing.module.css
+++ b/src/components/Pricing.module.css
@@ -47,11 +47,14 @@
   }
 }
 
+
 .button{
   border: transparent;
   padding: .4rem 1rem;
   border-radius: 8px;
   color: var(--yellow-500);
+  width: 100%;
+  cursor: pointer;
 
   &:hover {
     background-color: var(--yellow-700);
@@ -63,7 +66,7 @@
   border-radius: 50%;
   background-color: var(--gray-100);
   height:2px;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .ulContainer{
