--- a/src/components/Service.module.css
+++ b/src/components/Service.module.css
@@ -49,10 +49,10 @@
     position: relative;
     & img:last-child {
       height: 25rem;
-      transform: rotate(180deg);
+      /* transform: rotate(180deg); */
       position: absolute;
       right: 1rem;
-      top: -8rem;
+      top: -7rem;
     }
   }
   
